# LughCPP

./: CMakeLists.txt  TODO.MD  library.h
Assets/: AssetDescriptor.cpp  AssetDescriptor.h  AssetLoaderParameters.h  AssetLoadingTask.cpp  AssetLoadingTask.h  AssetManager.cpp  AssetManager.h  IAssetErrorListener.h  RefCountedContainer.cpp  RefCountedContainer.h
Assets/Loaders/: AssetLoader.h
Assets/Loaders/Resolvers/: AbsoluteFileHandleResolver.cpp  AbsoluteFileHandleResolver.h  IFileHandleResolver.h
Audio/: IAudioDevice.h  IAudioRecorder.h  IMusic.h  ISound.h
Core/: BaseGraphics.cpp  BaseGraphics.h  Game.cpp  Game.h  Gdx.cpp  Gdx.h  GdxVersion.cpp  GdxVersion.h  IApplication.h  IApplicationListener.h  IAudio.h  IDisposable.h  IFile.h  IInput.h  ILifeCycleListener.h  INet.h  IPreferences.h  IScreen.h
Files/Buffers/: Buffer.h  ByteBuffer.h  FloatBuffer.cpp  FloatBuffer.h  IntBuffer.h
Graphics/: Color.h  GraphicsStructs.h  ICubemapData.h  ICursor.h  IDownloadPixmapResponseListener.h  ITextureArrayData.h  ITextureData.h  Igl20.h  Igl30.h  Pixmap.cpp  Pixmap.h  PixmapFormat.cpp  PixmapFormat.h
Graphics/G2D/: Gdx2DPixmap.cpp  Gdx2DPixmap.h
Graphics/GLUtils/: GlVersion.cpp  GlVersion.h
Maths/: Affine2.cpp  Affine2.h  Matrix3.h  Matrix4.h  Vector2.h  Vector3.h
Utils/: Align.h  IClipboard.h  IRunnable.h  StringUtils.cpp  StringUtils.h  Trace.h
Utils/Async/: AsyncExecutor.cpp  AsyncExecutor.h  AsyncResult.cpp  AsyncResult.h
Utils/Collections/: Array.h  Collections.h  KeyValuePair.h  ObjectMap.cpp  ObjectMap.h
Utils/Exceptions/: GdxRuntimeException.cpp  GdxRuntimeException.h  IllegalStateException.h
